--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,195 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Кэт энерджи</title>
+</head>
 
-  </body>
+<body>
+  <header class="page-header">
+    <div class="page-wrapper">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="http://placehold.it/191x39" width="191" height="39" alt="Кэт энерджи">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню
+        </button>
+        <div class="main_nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a href="#">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a href="form">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+  </header>
+
+  <main class="page-main">
+    <section class="advertising">
+      <h1 class="page-main__title">
+        Функциональное питание для котов
+      </h1>
+      <span class="page-main__slogan">
+        Занялся собой? Займись котом!
+      </span>
+      <a class="btn">
+        Подобрать программу
+      </a>
+    </section>
+    <section class="cases">
+      <div class="cases__wrapper">
+        <ul class="cases-list">
+          <li class="cases-list__item">
+            <img class="case__img" src="http://placehold.it/35x49" width="35" height="49" alt="loose-weight">
+            <h3 class="case__title">Похудение</h3>
+            <p class="case__text">
+              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim
+              поможет вашему питомцу сбросить лишний вес.
+            </p>
+            <a class="case__link">Каталог Slim</a>
+          </li>
+          <li class="cases-list__item">
+            <img class="case__img" src="http://placehold.it/67x28" width="67" height="28" alt="get-weight">
+            <h3 class="case__title">Набор массы</h3>
+            <p class="case__text">
+              Заработать авторитет среди дворовых котов и даже собак?
+              Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            </p>
+            <a class="case__link">Каталог pro</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="advantages">
+      <div class="advantages__wrapper">
+        <h2 class="advantages__title">Как это работает</h2>
+        <ul class="advantages-list">
+          <li class="advantages-list__item">
+            <img class="advantage__img" src="http://placehold.it/60x60" width="60" height="60" alt="meal">
+            <p class="advantage__text">
+              Функциональное питание содержит только полезные питательные вещества.
+            </p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantage__img" src="http://placehold.it/60x60" width="60" height="60" alt="meal">
+            <p class="advantage__text">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantage__img" src="http://placehold.it/60x60" width="60" height="60" alt="meal">
+            <p class="advantage__text">
+              Замените один-два приема обычной еды на наше функциональное питание.
+            </p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantage__img" src="http://placehold.it/60x60" width="60" height="60" alt="meal">
+            <p class="advantage__text">
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="story">
+      <div class="story__wrapper">
+        <h2 class="story__title">
+          Живой пример
+        </h2>
+        <p class="story__text">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+          изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        </p>
+        <table class="story__facts">
+          <tbody>
+            <tr class="story__facts story__facts--cell">
+              <td class="story__facts-name">снижение
+                веса</td>
+              <td class="story__facts-amount">5 кг</td>
+            </tr>
+            <tr class="story__facts story__facts--cell">
+              <td class="story__facts-name">затрачено
+                времени</td>
+              <td class="story__facts-amount">60 дней</td>
+            </tr>
+            <tr class="story__facts story__facts--cost">
+              <td class="story__facts-name">Затраты на питание:
+              </td>
+              <td class="story__facts-amount">15 000 руб.</td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="story__slider slider">
+          <ul class="slider__list">
+            <li class="slider__item slider__item--before">
+              <img class="slider__picture" src="http://placehold.it/311x232" width="311" height="232" alt="before">
+            </li>
+            <li class="slider__item slider__item--after">
+                <img class="slider__picture" src="http://placehold.it/311x232" width="311" height="232" alt="after">
+              </li>
+          </ul>
+          <div class="slider__controls">
+            <button class="slider__control  slider__control--before" type="button">Было</button>
+            <div class="slider__controls-bar">
+              <div class="slider__controls-toggle"></div>
+            </div>
+            <button class="slider__control  slider__control--after" type="button">Стало</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contacts  contacts--main-page">
+      <div class="contacts__wrapper">
+        <div class="contacts__address">
+          <b class="contacts__message">приглашаем к сотрудничеству дилеров!</b>
+          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <div class="contacts__map">
+          <img class="map__img" src="http://placehold.it/320x400">
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <div class="page-footer__wrapper">
+      <a class="logo-footer" href="#">
+        <img class="logo-footer__image" src="http://placehold.it/128x24">
+      </a>
+      <div class="page-footer-social  social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link" href="https://vk.com/htmlacademy">
+              <img class="social__icone social__icone--vk" src="http://placehold.it/22x22">
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="https://www.instagram.com/htmlacademy">
+              <img class="social__icone social__icone--inst" src="http://placehold.it/22x22">
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="https://www.facebook.com/htmlacademy">
+              <img class="social__icone  social__icone--fb" src="http://placehold.it/22x22">
+            </a>
+          </li>
+        </ul>
+      </div>
+      <a class="page-footer__copyright copyright">
+        <span class="copyright__name">HTML Academy</span>
+        <img class="copyright__icone" src="http://placehold.it/27x34">
+      </a>
+    </div>
+  </footer>
+
+
+</body>
+
 </html>
