--- a/source/index.html
+++ b/source/index.html
@@ -18,13 +18,13 @@
         <div class="main_nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a href="#">Главная</a>
+              <a class="site-list__link" href="#">Главная</a>
             </li>
             <li class="site-list__item">
-              <a href="catalog.html">Каталог продукции</a>
+              <a class="site-list__link" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="site-list__item">
-              <a href="form">Подбор программы</a>
+              <a class="site-list__link" href="form">Подбор программы</a>
             </li>
           </ul>
         </div>
