--- a/source/index.html
+++ b/source/index.html
@@ -43,6 +43,7 @@
           <span class="page-main__slogan">
             Занялся собой? Займись котом!
           </span>
+          <img class="page-main__image" src="img/index-can-mobile@1x.png" alt="cat">
           <a class="button">
             Подобрать программу
           </a>
@@ -135,10 +136,10 @@
           <div class="story__slider slider">
             <ul class="slider__list">
               <li class="slider__item slider__item--before">
-                <img class="slider__picture" src="http://placehold.it/311x232" width="311" height="232" alt="before">
+                <img class="slider__picture" src="img/before-mobile@1x.png" alt="before">
               </li>
               <li class="slider__item slider__item--after">
-                <img class="slider__picture" src="http://placehold.it/311x232" width="311" height="232" alt="after">
+                <img class="slider__picture" src="img/after-mobile@1x.png" alt="after">
               </li>
             </ul>
             <div class="slider__controls">
