Добавляет адаптивные сетки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,7 +17,7 @@
         <nav class="main-nav">
           <button class="main-nav__toggle" type="button">Открыть меню
           </button>
-          <div class="main_nav__wrapper">
+          <div class="main-nav__wrapper">
             <ul class="main-nav__list  site-list">
               <li class="site-list__item">
                 <a class="site-list__link" href="index.html">Главная</a>
@@ -290,14 +290,15 @@
       </section>
       <section class="contacts">
         <div class="contacts__wrapper">
-          <div class="contacts__address">
-            <b class="contacts__message">приглашаем к сотрудничеству дилеров!</b>
-            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <div class="contacts__inner">
+            <div class="contacts__address">
+              <b class="contacts__message">приглашаем к сотрудничеству дилеров!</b>
+              <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+            </div>
+            <div class="contacts__map">
+              <div class="map"></div>
+            </div>
           </div>
-          <div class="contacts__map">
-            <div class="map"></div>
-          </div>
-        </div>
       </section>
     </main>
 
@@ -325,7 +326,7 @@
             </li>
           </ul>
         </div>
-        <a class="page-footer__copyright  copyright">
+        <a class="page-footer__copyright  copyright" href="https://htmlacademy.ru">
           <span class="copyright__name">HTML Academy</span>
           <img class="copyright__icone" src="http://placehold.it/27x34">
         </a>
