Добавляет мелкие доработки

--- a/source/index.html
+++ b/source/index.html
@@ -116,7 +116,7 @@
                 <td class="story__fact-amount">5 кг</td>
               </tr>
               <tr class="story__fact  story__fact--cell">
-                <td class="story__fac-name">затрачено
+                <td class="story__fact-name">затрачено
                   времени</td>
                 <td class="story__fact-amount">60 дней</td>
               </tr>
