Добавляет стилизацию футера

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -307,25 +307,23 @@
         <a class="logo-footer" href="#">
           <img class="logo-footer__image" src="img/logo-footer.svg" width="128" height="24" alt="logo">
         </a>
-        <div class="page-footer-social social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link" href="https://vk.com/htmlacademy">
-                <img class="social__icone social__icone--vk" src="http://placehold.it/22x22">
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="https://www.instagram.com/htmlacademy">
-                <img class="social__icone social__icone--inst" src="http://placehold.it/22x22">
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="https://www.facebook.com/htmlacademy">
-                <img class="social__icone  social__icone--fb" src="http://placehold.it/22x22">
-              </a>
-            </li>
-          </ul>
-        </div>
+        <ul class="page-footer__social  social">
+          <li class="social__item">
+            <a class="social__link" href="https://vk.com/htmlacademy">
+              <img class="social__icone  social__icone--vk" src="img/icon-vk-mobile.svg">
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="https://www.instagram.com/htmlacademy">
+              <img class="social__icone  social__icone--inst" src="img/icon-insta-mobile.svg">
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="https://www.facebook.com/htmlacademy">
+              <img class="social__icone  social__icone--fb" src="img/icon-fb-mobile.svg">
+            </a>
+          </li>
+        </ul>
         <a class="page-footer__copyright  copyright" href="https://htmlacademy.ru">
           <span class="copyright__name">HTML Academy</span>
           <img class="copyright__icone" src="http://placehold.it/27x34">
