--- a/source/form.html
+++ b/source/form.html
@@ -15,15 +15,12 @@
         <nav class="main-nav  main-nav--closed  main-nav--nojs">
           <div class="main-nav__wrapper">
             <a class="main-nav__logo  logo-page-header" href="index.html">
-              <!-- <a class="main-nav__logo  logo  logo--header page-header__logo   main-nav__logo  logo  logo--header"
-              href="index.html"> -->
               <picture>
                 <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
                 <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
                 <img class="main-nav__logo-image  logo-page-header__image" src="img/logo-mobile.svg" width="33"
                   height="38" alt="Кэт Энерджи">
               </picture>
-              <!-- <img class="main-nav__logo-title  logo__title" src="img/mobile-header.svg" width="101" height="18"> -->
             </a>
             <button class="main-nav__toggle" type="button">Открыть меню
             </button>
@@ -77,9 +74,6 @@
                 <div class="page-form__fieldset-wrapper">
                   <ul class="page-form__fieldset-list">
                     <li class="page-form__fieldset-field  field-radio">
-                      <!-- <label class="page-form__label  field-radio__label" for="lusing-weight">Похудение</label>
-                      <input class="page-form__input  field-radio__input" type="radio" name="cat-task"
-                        id="lusing-weight"> -->
                       <label for="losing-weight" class="field-radio__label">
                         <input class="field-radio__input  visually-hidden" type="radio" name="cat-task"
                           id="losing-weight" checked>
@@ -88,7 +82,6 @@
                       </label>
                     </li>
                     <li class="page-form__fieldset-field  field-radio">
-                      <!-- <label class="page-form__label  field-radio__label" for="get-weight">Набор массы</label> -->
                       <label for="get-weight" class="field-radio__label">
                         <input class="page-form__input  field-radio__input visually-hidden" type="radio" name="cat-task"
                           id="get-weight">
@@ -205,9 +198,6 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <!-- <a class="logo-footer" href="#">
-          <img class="logo-footer__image" src="img/logo-footer.svg" width="128" height="24" alt="logo">
-        </a> -->
         <a class="logo-page-footer" href="#">
             <img class="logo-page-footer__image" src="img/logo-footer.svg" width="128" height="24" alt="logo">
           </a>
@@ -236,6 +226,8 @@
     </footer>
   </div>
   <script src="js/menu.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
+  <script src="js/map.js"></script>
 </body>
 
 </html>
