--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,15 +12,6 @@
   <div class="page-wrapper">
     <header class="page-header">
       <div class="page-header__wrapper">
-        <!-- <a class="page-header__logo">
-          <picture>
-            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-            <img class="main-nav__logo-image  logo__image" src="img/icon-logo-mobile.svg" width="33" height="38"
-              alt="Кэт Энерджи">
-          </picture>
-          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Кэт Энерджи">
-        </a> -->
         <nav class="main-nav  main-nav--closed  main-nav--nojs">
           <div class="main-nav__wrapper">
             <a class="main-nav__logo  logo-page-header" href="index.html">
@@ -30,21 +21,9 @@
                 <img class="main-nav__logo-image  logo-page-header__image" src="img/logo-mobile.svg" width="33"
                   height="38" alt="Кэт Энерджи">
               </picture>
-              <!-- <img class="main-nav__logo-title  logo__title" src="img/mobile-header.svg" width="101" height="18"> -->
             </a>
             <button class="main-nav__toggle" type="button">Открыть меню
             </button>
-            <!-- <ul class="main-nav__list  site-list">
-              <li class="site-list__item">
-                <a class="site-list__link" href="index.html">Главная</a>
-              </li>
-              <li class="site-list__item  site-list__item--active">
-                <a class="site-list__link" href="#">Каталог продукции</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="form.html">Подбор программы</a>
-              </li>
-            </ul> -->
             <ul class="main-nav__list  site-list">
               <li class="site-list__item  main-nav__item">
                 <a class="site-list__link  main-nav__link" href="index.html">Главная</a>
@@ -66,7 +45,6 @@
       <section class="product-catalog">
         <div class="product-catalog__wrapper">
           <h2 class="content-title  content-title--product-catalog">Каталог продукции</h2>
-          <!-- <h2 class="product-catalog__title">Каталог продукции</h2> -->
           <ul class="product-catalog__list">
             <li class="product-catalog__item">
               <div class="product-catalog__item-inner">
@@ -83,7 +61,6 @@
                     srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
                 </picture>
               </div>
-              <!--<img class="product-catalog__image" src="http://placehold.it/140x144"> -->
               <div class="product-catalog__desc">
                 <a class="product-catalog__title" href="#">Cat Energy PRO 500 г</a>
                 <table class="product-catalog__table  product-table">
@@ -120,7 +97,6 @@
                     srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 1000 г">
                 </picture>
               </div>
-              <!-- <img class="product-catalog__image" src="http://placehold.it/140x144"> -->
               <div class="product-catalog__desc">
                 <a class="product-catalog__title" href="#">Cat Energy PRO 1000 г</a>
                 <table class="product-catalog__table  product-table">
@@ -160,7 +136,6 @@
                     srcset="img/fish-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
                 </picture>
               </div>
-              <!-- <img class="product-catalog__image" src="http://placehold.it/140x144"> -->
               <div class="product-catalog__desc">
                 <a class="product-catalog__title" href="#">Cat Energy PRO 500 г</a>
                 <table class="product-catalog__table  product-table">
@@ -186,7 +161,6 @@
             </li>
             <li class="product-catalog__item">
               <div class="product-catalog__item-inner">
-                <!-- <img class="product-catalog__image" src="http://placehold.it/140x144"> -->
                 <picture>
                   <source media="(min-width: 1300px)"
                     srcset="img/fish-big-desktop@1x.png, img/fish-big-desktop@2x.png 2x">
@@ -224,7 +198,6 @@
             </li>
             <li class="product-catalog__item">
               <div class="product-catalog__item-inner">
-                <!-- <img class="product-catalog__image" src="http://placehold.it/140x144"> -->
                 <picture>
                   <source media="(min-width: 1300px)"
                     srcset="img/buckwheat-big-desktop@1x.png, img/buckwheat-small-desktop@2x.png 2x">
@@ -278,7 +251,6 @@
                     srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
                 </picture>
               </div>
-              <!-- <img class="product-catalog__image" src="http://placehold.it/140x144"> -->
               <div class="product-catalog__desc">
                 <a class="product-catalog__title" href="#">Cat Energy PRO 1000 г</a>
                 <table class="product-catalog__table  product-table">
@@ -306,9 +278,9 @@
               <div class="product-catalog__item-inner">
                 <picture>
                   <source media="(min-width: 1300px)"
-                    srcset="img/rice-big-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
+                    srcset="img/rice-small-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)"
-                    srcset="img/rice-big-tablet@1x.png, img/rice-small-tablet@2x.png 2x">
+                    srcset="img/rice-small-tablet@1x.png, img/rice-small-tablet@2x.png 2x">
                   <source srcset="img/rice-small-mobile@2x.jpg 2x">
                   <source media="(min-width: 1300px)"
                     srcset="img/rice-small-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
@@ -318,7 +290,6 @@
                     srcset="img/rice-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
                 </picture>
               </div>
-              <!-- <img class="product-catalog__image" src="http://placehold.it/140x144"> -->
               <div class="product-catalog__desc">
                 <a class="product-catalog__title" href="#">Cat Energy PRO 500 г</a>
                 <table class="product-catalog__table  product-table">
@@ -344,7 +315,6 @@
             </li>
             <li class="product-catalog__item  product-catalog__item--extra">
               <div class="product-catalog__inner">
-                <!-- <img class="product-catalog__picture" src="http://placehold.it/140x144" width="140" height="144"> -->
                 <h2 class="product-catalog__title">Показать еще 100500 товаров</h2>
                 <p class="product-catalog__desc">На самом деле вкусов гораздо больше!</p>
                 <a class="product-catalog__button  button  button--show-all">
@@ -440,9 +410,6 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <!-- <a class="logo-footer" href="#">
-          <img class="logo-footer__image" src="img/logo-footer.svg" width="128" height="24" alt="logo">
-        </a> -->
         <a class="logo-page-footer" href="#">
             <img class="logo-page-footer__image" src="img/logo-footer.svg" width="128" height="24" alt="logo">
           </a>
@@ -471,6 +438,8 @@
     </footer>
   </div>
   <script src="js/menu.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
+  <script src="js/map.js"></script>
 </body>
 
 </html>
