--- a/source/index.html
+++ b/source/index.html
@@ -212,6 +212,8 @@
     </footer>
   </div>
   <script src="js/menu.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
+  <script src="js/map.js"></script>
 </body>
 
 </html>
